Fix z-index issue in header menu

--- a/assets/styles/organisms/_header.scss
+++ b/assets/styles/organisms/_header.scss
@@ -281,7 +281,7 @@ li.menu-item-gtranslate {
         top: 57px;
         right: 0;
         left: 0;
-        z-index: 1;
+        z-index: 100;
         -webkit-box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
         box-shadow: 0px 16px 32px rgba(25, 86, 168, 0.1);
         background-color: $color-black;
